objects/Account.object
<CustomObject>
    <fields>
        <fullName>AGPManagerApprovalDate__c</fullName>
        <label>AGP Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APPWaveCurrent__c</fullName>
        <label>XX Current APP Wave</label>
        <picklist>
            <picklistValues>
                <fullName>Wave 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 1-2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 1-2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 2-2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Wave 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 2-2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APPWaveOriginal__c</fullName>
        <label>XX Original APP Wave</label>
        <picklist>
            <picklistValues>
                <fullName>Wave 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 1-2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 2-2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 1-2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Wave 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 2-2009</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AROfficeCode__c</fullName>
        <label>AR Office Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountGrowthPlanDetails__c</fullName>
        <description>User enters details of their business plan for the account.</description>
        <label>Account Growth Plan Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountIndustry__c</fullName>
        <formula>IF(SICIndustryGroupName4__c=&quot;Pest Control MGMT&quot;,&quot;Pest Control&quot;,
IF(SICIndustryGroupName4__c=&quot;PHARMACEUTICAL-UNIVAR&quot;,&quot;PHARMA&quot;,
IF(SICIndustryGroupName4__c=&quot;OIL FIELD SERVICES-UNIVAR&quot;,&quot;Oil &amp; Gas&quot;,
IF(SICIndustryGroupName4__c=&quot;LUBRICANTS&quot;,&quot;CASE&quot;,
IF(SICIndustryGroupName4__c=&quot;PERSONAL CARE-UNIVAR&quot;,&quot;Personal Care&quot;,
IF(SICIndustryGroupName4__c=&quot;ENERGY SECTOR&quot;,&quot;Oil &amp; Gas&quot;,
IF(SICIndustryGroupName4__c=&quot;HOUSEHLD &amp; INDUST CLEANRS&quot;,&quot;HIC&quot;,
IF(SICIndustryGroupName4__c=&quot;COATINGS, INK &amp; ADHESIVES&quot;,&quot;CASE&quot;,
IF(SICIndustryGroupName4__c=&quot;RUBBER &amp; PLASTICS&quot;,&quot;CASE&quot;,
SICIndustryGroupName4__c)))))))))</formula>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountingPeriod__c</fullName>
        <description>Most recent month for YTD figures. Ex - if this is after the middle of March, it will be February, once Feb month-end has completed.</description>
        <label>Accounting Period</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcornARCarryingCostsPYM__c</fullName>
        <label>AR Carrying Costs PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornARCarryingCostsPYTD__c</fullName>
        <label>AR Carrying Costs PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornARCarryingCostsYM__c</fullName>
        <label>AR Carrying Costs CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornARCarryingCostsYTD__c</fullName>
        <label>AR Carrying Costs YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornAdjGMPYM__c</fullName>
        <label>Total GM PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornAdjGMPYTD__c</fullName>
        <label>Total GM PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornAdjGMYM__c</fullName>
        <label>Total GM CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornAdjGMYTD__c</fullName>
        <label>Total GM YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornEBITDAPYM__c</fullName>
        <label>EBITDA PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornEBITDAPYTD__c</fullName>
        <label>EBITDA PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornEBITDAYM__c</fullName>
        <label>EBITDA CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornEBITDAYTD__c</fullName>
        <label>EBITDA YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornECMPYM__c</fullName>
        <label>ECM PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornECMPYTD__c</fullName>
        <label>ECM PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornECMYM__c</fullName>
        <label>ECM CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornECMYTD__c</fullName>
        <label>ECM YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornEconomicGMPYM__c</fullName>
        <label>EGM PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornEconomicGMPYTD__c</fullName>
        <label>EGM PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornEconomicGMYM__c</fullName>
        <label>EGM CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornEconomicGMYTD__c</fullName>
        <label>EGM YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornFulfillmentCostsPYM__c</fullName>
        <label>Fulfillment Costs PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornFulfillmentCostsPYTD__c</fullName>
        <label>Fulfillment Costs PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornFulfillmentCostsYM__c</fullName>
        <label>Fulfillment Costs CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornFulfillmentCostsYTD__c</fullName>
        <label>Fulfillment Costs YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornInvCarryingCostsPYM__c</fullName>
        <label>Inventory Carrying Costs PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornInvCarryingCostsPYTD__c</fullName>
        <label>Inventory Carrying Costs PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornInvCarryingCostsYM__c</fullName>
        <label>Inventory Carrying Costs CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornInvCarryingCostsYTD__c</fullName>
        <label>Inventory Carrying Costs YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornNumOrdersPYM__c</fullName>
        <inlineHelpText>Credit and Debit Memos are not included in the Number of Orders.</inlineHelpText>
        <label>Number of Orders PYM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcornNumOrdersPYTD__c</fullName>
        <inlineHelpText>Credit and Debit Memos are not included in the Number of Orders.</inlineHelpText>
        <label>Number of Orders PYTD</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcornNumOrdersYM__c</fullName>
        <inlineHelpText>Credit and Debit Memos are not included in this total.</inlineHelpText>
        <label>Number of Orders CYM</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcornNumOrdersYTD__c</fullName>
        <inlineHelpText>Credit and Debit Memos are not included in the Number of Orders.</inlineHelpText>
        <label>Number of Orders YTD</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcornRawGMPYM__c</fullName>
        <label>Raw GM PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRawGMPYTD__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
Industrial Chemical Previous Year Gross Margin Dollars
5/5/2010 - km - change for Acorn input</description>
        <label>Raw GM Prior YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRawGMPctPYTD__c</fullName>
        <formula>IF( AcornTotSalesPYTD__c    &lt;&gt; 0, ROUND( AcornRawGMPYTD__c    / AcornTotSalesPYTD__c,2), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raw GM% Prior YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcornRawGMPctYTD__c</fullName>
        <formula>IF( AcornTotSalesYTD__c    &lt;&gt; 0, ROUND( AcornRawGMYTD__c    / AcornTotSalesYTD__c,2), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Raw GM% YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcornRawGMYM__c</fullName>
        <label>Raw GM CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRawGMYTD__c</fullName>
        <description>Industrial Chemical Year to Date Gross Margin Dollars
10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/2010 - KM - changed for Acorn</description>
        <inlineHelpText>Sales and GM information is sourced from Acorn.</inlineHelpText>
        <label>Raw GM YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRolling12MoRawGMPY__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/2010:  km - changed the Field Label from &quot;Rolling 13 - 24 Month $GM&quot; to &quot;Rolling 13 - 24 Month Raw $GM&quot; &amp; the Field Name from &quot;RollingPreviousYr12MoGM&quot; to &quot;AcornRollingPrevYr12MoGM__c&quot; &amp; length from 11,2 to 11,0.</description>
        <label>Rolling 13 - 24 Month Raw GM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRolling12MoRawGM__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/2010:  km - changed the Field Label from &quot;Rolling 12 Month $GM&quot; to &quot;Rolling 12 Month Raw $GM&quot;, the Field Name from &quot;Rolling12MonthGMDollars&quot; to &quot;AcornRolling12MoGMDollars__c&quot; &amp; changed the length from 11,2 to 11,0.</description>
        <label>Rolling 12 Month Raw GM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRolling12MoSalesPY__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/2010:  km - changed the field name from &quot;RollingPreviousYr12MoSales&quot; to &quot;AcornRollingPrevYr12MoSales__c&quot; &amp; changed the length from 11,2 to 11,0.</description>
        <inlineHelpText>Sales and GM information is sourced from Acorn.</inlineHelpText>
        <label>Rolling 13 - 24 Month Sales</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRolling12MoSales__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/2010:  km - changed Field Name from &quot;Rolling12MonthSales&quot; to &quot;AcornRolling12MoSales__c&quot; and changed length from 11,2 to 11,0.</description>
        <inlineHelpText>Sales and GM information is sourced from Acorn.</inlineHelpText>
        <label>Rolling 12 Month Sales</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRolling90DayRawGMPY__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/10 - KM - Changed for Acorn</description>
        <label>Rolling Previous Year 90 Day Raw GM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRolling90DayRawGM__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/2010 - KM - Changed name &amp; field attributes to replace IW with Acorn sales</description>
        <label>Rolling 90 Day Raw GM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRolling90DaySalesPY__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/10 - KM - Changed for Acorn</description>
        <label>Rolling Previous Year 90 Day Sales</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornRolling90DaySales__c</fullName>
        <description>10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/10 - KM - Changed for Acorn</description>
        <label>Rolling 90 Day Sales</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornSalesMarketingPYM__c</fullName>
        <label>Sales &amp; Marketing PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornSalesMarketingPYTD__c</fullName>
        <label>Sales &amp; Marketing PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornSalesMarketingYM__c</fullName>
        <label>Sales &amp; Marketing CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornSalesMarketingYTD__c</fullName>
        <label>Sales &amp; Marketing YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTotGMAdjPYM__c</fullName>
        <label>Total GM Adjustments PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTotGMAdjPYTD__c</fullName>
        <label>Total GM Adjustments PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTotGMAdjYM__c</fullName>
        <label>Total GM Adjustments CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTotGMAdjYTD__c</fullName>
        <label>Total GM Adjustments YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTotPoundsPYM__c</fullName>
        <label>Total Pounds PYM</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcornTotPoundsPYTD__c</fullName>
        <label>Total Pounds PYTD</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcornTotPoundsYM__c</fullName>
        <label>Total Pounds CYM</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcornTotPoundsYTD__c</fullName>
        <label>Total Pounds YTD</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcornTotSalesPYM__c</fullName>
        <label>Total Sales PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTotSalesPYTD__c</fullName>
        <description>Industrial Chemical Previous Year Sales
10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/2010 - km - change for Acorn</description>
        <label>Total Sales Prior YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTotSalesYM__c</fullName>
        <label>Total Sales CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTotSalesYTD__c</fullName>
        <description>Industrial Chemical Year to Date Sales
10/19/2005 - Eli - changed length to 11,2 to match source data from DCS.
5/5/2010 - km - change for Acorn</description>
        <label>Total Sales YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTranspExpPYM__c</fullName>
        <label>Transportation Expense PYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTranspExpPYTD__c</fullName>
        <label>Transportation Expense PYTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTranspExpYM__c</fullName>
        <label>Transportation Expense CYM</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcornTranspExpYTD__c</fullName>
        <label>Transportation Expense YTD</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnnualSalesCalls__c</fullName>
        <label># Planned Annual Sales Calls</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Chemical_Spend__c</fullName>
        <description>Sum of all CPPs = &quot;Estimated Sales Value&quot;</description>
        <inlineHelpText>Sum of all CPPs = &quot;Estimated Sales Value&quot;</inlineHelpText>
        <label>Annual Chemical Spend</label>
        <summarizedField>CPP__c.Estimated_Sales_Value__c</summarizedField>
        <summaryForeignKey>CPP__c.AccountId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AreaCode__c</fullName>
        <description>9/13/2007 - Kathy - changed field label to match UVX Code Catgy 136 (part of CR to fix Sales Hierarchy data)</description>
        <label>GM District Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AreaName__c</fullName>
        <description>9/13/2007 - Kathy - changed field label to match UVX Code Catgy 136 (part of CR to fix Sales Hierarchy data)</description>
        <label>GM District Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AverageDaysLate__c</fullName>
        <description>4/6/05 - Eli - changed to type &quot;Number&quot; to accomodate comparison with DCS data.
THIS FIELD IS NOT ACTUALLY BROUGHT OVER. INTEGRATION WOULD NEED CHANGING TO GET IT FROM ODSx.CUSTOMER_BILL_TO TABLE.</description>
        <label>Average Days Late</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCSSAMId__c</fullName>
        <description>Id of the BCS SAM for this account, from UVX Code Category 762</description>
        <inlineHelpText>Id of the BCS SAM for this account, from UVX Code Category 762</inlineHelpText>
        <label>BCS SAM Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCSSAMLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BCS Strategic Account Manager - user lookup</description>
        <inlineHelpText>BCS Strategic Account Manager</inlineHelpText>
        <label>BCS SAM</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts (BCS SAM)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BCSSAMName__c</fullName>
        <description>Name of the BCS Strategic Account Manager for this account (text only)</description>
        <inlineHelpText>Name of the BCS Strategic Account Manager for this account (text only)</inlineHelpText>
        <label>BCS SAM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCSSAMPerNr__c</fullName>
        <description>PerNr of the BCS SAM for this account, from UVX Code Category 762</description>
        <inlineHelpText>PerNr of the BCS SAM for this account, from UVX Code Category 762</inlineHelpText>
        <label>BCS SAM PerNr</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCS_Challenger_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to allow BCS to claim account as a Challenger Account.</description>
        <label>BCS Challenger Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingFax__c</fullName>
        <description>Feb. 22 2005 to support new Customer record type.</description>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillingPhoneNumber__c</fullName>
        <description>This is a new field to replace the generic Phone number provided by SFDC.
Feb. 24 2005</description>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BuyingBehavior__c</fullName>
        <description>Values to be determined by Market Development.</description>
        <label>Buying Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAMRAMName__c</fullName>
        <description>For Prospects &amp; Ship-To&apos;s only - Owner of the Parent Account, if the parent has a CA#.</description>
        <formula>IF
( AND(VALUE(Parent.GroupAccountNumber__c) &gt; 0, 
     OR($RecordType.Name  =  &quot;Prospect&quot;,$RecordType.Name  =  &quot;Ship To&quot;)), 

Parent.OwnerLink__r.FirstName  &amp; &quot; &quot; &amp;  Parent.OwnerLink__r.LastName, &quot;&quot;)</formula>
        <inlineHelpText>Owner of the Parent Account, if the parent has a CA# and this account is a Prospect or a Ship-To.</inlineHelpText>
        <label>CAM/RAM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCAcctMgrId__c</fullName>
        <description>UVX Id of the CC Acct Mgr for this account</description>
        <inlineHelpText>UVX Id of the CC Acct Mgr for this account</inlineHelpText>
        <label>CC Acct Mgr Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCAcctMgrLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ChemCare Account Manager - user lookup</description>
        <inlineHelpText>ChemCare Account Manager</inlineHelpText>
        <label>CC Acct Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts (CC Acct Mgr)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCAcctMgrName__c</fullName>
        <description>Name of the CC Acct Mgr for this account (text only)</description>
        <inlineHelpText>Name of the CC Acct Mgr for this account</inlineHelpText>
        <label>CC Acct Mgr Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCContactPhone__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare Contact Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCContainerTypeCode__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare Container Type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCContainerTypeName__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare Container Type Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCCorpAccountName__c</fullName>
        <label>ChemCare Corp. Account Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCCorpAccountNumber__c</fullName>
        <label>ChemCare Corp. Account Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCForecastGMPercent__c</fullName>
        <description>ChemCare Forecast Gross Margin Percentage
2005-08-04 - Eli - change length from 2 to 3 because DCS data contains percentages &gt; 99.9%
2006-05-24 - Eli - change to 3, 0 at business&apos; request per Cindy&apos;s instructions.</description>
        <label>ChemCare Forecast GM%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCForecastGrossMargin__c</fullName>
        <description>ChemCare Forecast Gross Margin Dollars</description>
        <label>ChemCare Forecast GM$</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCForecastSales__c</fullName>
        <description>ChemCare Forecasted Sales
2006-05-24 - Eli - change to 10, 0 at business&apos; request per Cindy&apos;s instructions.</description>
        <label>ChemCare Forecast Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCPhysicalStateCode__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare Physical State Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPhysicalStateName__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare Physical State Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPrevYrGMPercent__c</fullName>
        <formula>IF( CCPrevYrSales__c   &lt;&gt; 0, ROUND(  CCPrevYrGrossMargin__c   / CCPrevYrSales__c,2), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChemCare GM% Prior YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCPrevYrGrossMargin__c</fullName>
        <description>ChemCare Previous Year Gross Margin Dollars</description>
        <label>ChemCare GM Prior YTD</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCPrevYrSales__c</fullName>
        <description>ChemCare Previous Year Sales</description>
        <label>ChemCare Sales Prior YTD</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCRolling12MoGM__c</fullName>
        <label>ChemCare Rolling 12 Month GM</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCRolling12MoSales__c</fullName>
        <label>ChemCare Rolling 12 Month Sales</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCRollingPrev12MoGM__c</fullName>
        <label>ChemCare Rolling 13 - 24 Month GM</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCRollingPrev12MoSales__c</fullName>
        <label>ChemCare Rolling 13 - 24 Month Sales</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCYTDGMPercent__c</fullName>
        <formula>IF( CCYTDSales__c   &lt;&gt; 0, ROUND(   CCYTDGrossMargin__c   / CCYTDSales__c,2), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChemCare GM% YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CCYTDGrossMargin__c</fullName>
        <description>ChemCare Year to Date Gross Margin Dollars</description>
        <label>ChemCare GM YTD</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CCYTDSales__c</fullName>
        <description>ChemCare Year to Date Sales</description>
        <label>ChemCare Sales YTD</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <description>Account Allocation - Candidate Date</description>
        <label>Candidate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChemCareContactName__c</fullName>
        <description>5/5/2010 - KM - DELETE this as soon as someone knows how to recompile the Sample Request proxy with modified WSDL.  In meantime, s/b visible only to the SFDC Proxy&apos;s profile.</description>
        <label>XX ChemCare Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>